--- a/game.css
+++ b/game.css
@@ -17,3 +17,11 @@
     padding: 1.5rem;
     width: 100%;
 }
+
+.correct {
+    background-color: green;
+}
+
+.incorrect {
+    background-color: red;
+}
