added progress bar

--- a/game.css
+++ b/game.css
@@ -36,8 +36,22 @@
 .hud-prefix {
     font-size: 2rem;
     align-items: center;
+    text-align: center;
 }
 
 .hud-main-text {
     text-align: center;
+}
+
+#progressBar {
+    width: 20rem;
+    height: 4rem;
+    border: 0.1rem solid rgb(0, 126, 126);
+    margin-top: 1.5rem;
+}
+
+#progress-bar-full {
+    height: 3.8rem;
+    background-color: rgb(0, 126, 126);
+    width: 0%;
 }
